# crypto-market-data-plant

./: .env.example  .gitignore  CLAUDE.md  FOLLOW_UPS.md  README.md  ROADMAP.md  STANDARDS.md  ops.live.example.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: HISTORY.md  archive_layout.md  data_quality.md  kalshi_crypto_binary_options.md  publication_safety.md  text_source_p2_feasibility.md  windows_service.md
scripts/: generate_mexc_protobuf.py  install_startup_task.ps1  redeploy_runner.ps1  run_ops_runner.ps1
src/crypto_collector/: __init__.py  asset_registry.py  cli.py  config.py  context_models.py  instrument_master.py  market_normalizers.py  market_snapshots.py  models.py  normalizer.py  offload.py  ops.py  pipeline.py  promotion.py  quality.py  quarantine.py  replay.py  research_manifest.py  storage.py  text_normalizers.py
src/crypto_collector/collectors/: base.py  binance_futures_rest.py  generic_ws.py  kalshi.py  mexc.py  mock_l3.py  rest_poll.py  text_feeds.py
src/crypto_collector/collectors/mexc_pb/: PublicAggreDealsV3Api_pb2.py  PublicLimitDepthsV3Api_pb2.py  PushDataV3ApiWrapper_pb2.py  __init__.py
src/crypto_collector/proto/mexc/: PublicAggreDealsV3Api.proto  PublicLimitDepthsV3Api.proto  PushDataV3ApiWrapper.proto  README.md
tests/: test_asset_registry.py  test_binance_futures_rest.py  test_collectors.py  test_config.py  test_durability.py  test_instrument_master.py  test_kalshi_collector.py  test_market_normalizers.py  test_mexc_cli.py  test_mexc_normalizers.py  test_mexc_replay.py  test_normalized_root.py  test_offload.py  test_ops.py  test_pipeline.py  test_promotion.py  test_quality.py  test_quarantine.py  test_replay.py  test_repo_hygiene.py  test_research_manifest.py  test_storage.py  test_text_cli.py  test_text_feeds.py  test_text_replay.py
