[project]
name = "crypto-market-data-plant"
version = "0.1.0"
description = "Research-grade public crypto market data collection, replay, quality, and curation plant."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyarrow>=14.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    # The MEXC lane's protobuf bindings + the offline binary-fixture tests need the
    # protobuf runtime; keep it in dev so `pytest` exercises the MEXC decode path.
    "protobuf>=6.33.5,<8",
]
# MEXC spot market data is protobuf-encoded (the JSON websocket was retired
# 2025-08-04). Only the MEXC lane needs this; the core install (and the live Binance
# deployment) stays protobuf-free. Enable with `pip install -e ".[mexc]"`. The
# generated bindings are committed (crypto_collector/collectors/mexc_pb), so runtime
# needs only this `protobuf` runtime, never `protoc`. Range floored at the version the
# committed gencode targets and capped below the next major (gencode major N runs on
# runtime major N..N+1); both 6.33.x and 7.x were validated.
mexc = [
    "protobuf>=6.33.5,<8",
]

[project.scripts]
market-data-plant = "crypto_collector.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
